src/objects/NRG_Lead__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_FICO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low FICO ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Lead_Id__c</fullName>
        <label>NRG Lead Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_Run_Joint_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG Run Joint Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Run_Primary_Credit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG Run Primary Credit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NRG Leads</relationshipLabel>
        <relationshipName>NRG_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_First_Name__c</fullName>
        <label>Secondary First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Last_Name__c</fullName>
        <label>Secondary Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>NRG Leads</relationshipLabel>
        <relationshipName>NRG_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design</label>
        <referenceTo>System_Design__c</referenceTo>
        <relationshipLabel>NRG Leads</relationshipLabel>
        <relationshipName>NRG_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NRG Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NRG_Lead_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NRG Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NRG Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>